--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
     font-family: "Bricolage Grotesque", serif;
     font-style: normal;
+}
+
+html{
     overflow-x: hidden;
 }
+
 
 header{
     display: flex;
@@ -103,17 +107,6 @@ margin-left: -110vh;
     margin-bottom: 20px;
 }
 
-
-@media (max-width: 768px) {
-    .rocket-section {
-        text-align: center;
-        padding: 20px;
-    }
-    .text-content {
-        padding: 20px;
-        max-width: 90%;
-    }
-}
 
 .servicos {
     display: flex;
