nav em responsividade celular

--- a/css/style.css
+++ b/css/style.css
@@ -643,3 +643,15 @@ width: 1250px;
         margin-left: 20px;
     }
 }
+
+@media (max-width: 834px){
+    nav{
+        display: none;
+    }
+    .btn{
+        display: none;
+    }
+    header{
+        justify-content: center;
+    }
+}
